--- a/css/style.css
+++ b/css/style.css
@@ -257,8 +257,8 @@ img {
   text-align: center;
   color: brown;
 }
-.QsnDiv h3{
-  margin: 5%;
+.QsnDiv h4{
+  margin-top: 5%;
 }
 .QsnDiv span{
   color: crimson;
