--- a/css/style.css
+++ b/css/style.css
@@ -249,6 +249,7 @@ img {
   width: 75%;
   margin: auto;
   margin-top: 5%;
+  margin-bottom: 5%;
   padding: 2%;
   border-radius: 15px;
   background-color: beige;
